--- a/bin/index.html
+++ b/bin/index.html
@@ -5,10 +5,12 @@
   <style>* {padding: 0; margin: 0}</style>
   <title>New Game no name</title>
 </head>
-
-<script></script>
+<script src=js/phaser.js></script>
+<script src="../src/game.js"></script>
 <body>
-     <script>
+    <h1>Simple game</h1>
+	<div id="content"></div>
+    <script>
     </script>
 </body>
 </html>
