--- a/bin/index.html
+++ b/bin/index.html
@@ -6,6 +6,7 @@
   <title>New Game no name</title>
 </head>
 <script src=js/phaser.js></script>
+<script src="../scr/enums.js"></script>
 <script src="../src/game.js"></script>
 <body>
     <h1>Simple game</h1>
