after many things that did not or did half work, i finally found what works https://github.com/rhmoller/phaser-typescript-template saved my ass all the tutorials are like outdated

--- a/bin/index.html
+++ b/bin/index.html
@@ -6,7 +6,12 @@
   <title>New Game no name</title>
 </head>
 <script src=js/phaser.js></script>
-<script src="../scr/enums.js"></script>
+<script src="../src/enums.js"></script>
+<script src="../src/states/bootState.js"></script>
+<script src="../src/states/preloadState.js"></script>
+<script src="../src/states/titleState.js"></script>
+<script src="../src/states/playState.js"></script>
+<script src="../src/player.js"></script>
 <script src="../src/game.js"></script>
 <body>
     <h1>Simple game</h1>
