--- a/bin/index.html
+++ b/bin/index.html
@@ -7,16 +7,15 @@
 </head>
 <script src=js/phaser.js></script>
 <script src="../src/enums.js"></script>
+<script src="../src/interfaces.js"></script>
 <script src="../src/states/bootState.js"></script>
 <script src="../src/states/preloadState.js"></script>
 <script src="../src/states/titleState.js"></script>
 <script src="../src/states/playState.js"></script>
 <script src="../src/player.js"></script>
-<script src="../src/game.js"></script>
+<script src="../src/levels/level1.js"></script>
+
 <body>
-    <h1>Simple game</h1>
-	<div id="content"></div>
-    <script>
-    </script>
+    <script src="../src/game.js"></script>
 </body>
 </html>
