--- a/bin/index.html
+++ b/bin/index.html
@@ -14,6 +14,7 @@
 <script src="../src/states/playState.js"></script>
 <script src="../src/player.js"></script>
 <script src="../src/npcs/rogueNpc.js"></script>
+<script src="../src/enemies/rogueEnemy.js"></script>
 <script src="../src/levels/level1.js"></script>
 
 <body>
