getting closer to repo creation

--- a/bin/index.html
+++ b/bin/index.html
@@ -11,10 +11,10 @@
 <script src="../src/states/bootState.js"></script>
 <script src="../src/states/preloadState.js"></script>
 <script src="../src/states/titleState.js"></script>
-<script src="../src/states/playState.js"></script>
 <script src="../src/player.js"></script>
 <script src="../src/npcs/rogueNpc.js"></script>
 <script src="../src/enemies/rogueEnemy.js"></script>
+<script src="../src/levels/level0.js"></script>
 <script src="../src/levels/level1.js"></script>
 
 <body>
