added assets, added bonfire, made dialogue more elegant

--- a/bin/index.html
+++ b/bin/index.html
@@ -13,6 +13,7 @@
 <script src="../src/states/titleState.js"></script>
 <script src="../src/player.js"></script>
 <script src="../src/npcs/rogueNpc.js"></script>
+<script src="../src/objects/Bonfire.js"></script>
 <script src="../src/enemies/rogueEnemy.js"></script>
 <script src="../src/levels/level0.js"></script>
 <script src="../src/levels/level1.js"></script>
