generate into single js file

--- a/bin/index.html
+++ b/bin/index.html
@@ -6,19 +6,7 @@
   <title>New Game no name</title>
 </head>
 <script src=js/phaser.js></script>
-<script src="../src/enums.js"></script>
-<script src="../src/interfaces.js"></script>
-<script src="../src/states/bootState.js"></script>
-<script src="../src/states/preloadState.js"></script>
-<script src="../src/states/titleState.js"></script>
-<script src="../src/player.js"></script>
-<script src="../src/npcs/rogueNpc.js"></script>
-<script src="../src/objects/Bonfire.js"></script>
-<script src="../src/enemies/rogueEnemy.js"></script>
-<script src="../src/levels/level0.js"></script>
-<script src="../src/levels/level1.js"></script>
-
 <body>
-    <script src="../src/game.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
