--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <style>* {padding: 0; margin: 0}</style>
   <title>New Game no name</title>
 </head>
-<script src=js/phaser.js></script>
+<script src=bin/js/phaser.js></script>
 <body>
-    <script src="js/game.js"></script>
+    <script src="bin/js/game.js"></script>
 </body>
 </html>
